--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -75,6 +75,10 @@ body {
     background-repeat: no-repeat;
 }
 
+.products-section {
+    margin-top: 30px;
+}
+
 /* Estilos del pie de página */
 .footer {
     background-color: #343a40;
