--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -69,7 +69,7 @@ body {
 
 /* Estilos del fondo de la página */
 body {
-    background-image: url('../img/riot3.jpg'); /* Cambia la ruta a la ubicación de tu imagen */
+    background-image: url('../img/riot3.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -107,13 +107,13 @@ body {
 .footer-logo img {
     width: 40px;
     height: 40px;
-    border-radius: 50%; /* Agregado para hacer la imagen redonda */
+    border-radius: 50%;
 }
 
 /* Estilos para la sección de contacto */
 .contact-section {
     padding: 50px 0;
-    background-color: transparent; /* Mantén el fondo transparente */
+    background-color: transparent;
 }
 
 .contact-container {
@@ -123,7 +123,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     justify-items: center;
-    text-align: center; /* Centra el contenido en el centro de la página */
+    text-align: center; 
 }
 
 .contact-info {
@@ -152,7 +152,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px; /* Espaciado para separar el icono del borde superior */
+    margin-top: 20px; 
 }
 
 .contact-icon img {
